--- a/demo/index.html
+++ b/demo/index.html
@@ -20,7 +20,8 @@
 
     </section>
 
-    <script src="lib/jquery-1.8.0.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js" integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
     <script src="lib/jquery.ba-resize.min.js"></script>
     <script src="../src/jquery.responsive-containers.js"></script>
 
